--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "randomquotes",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pawelrokosz.github.io/RandomQuotesReactApp/",
   "dependencies": {
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
@@ -9,6 +10,7 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts": "1.0.13"
   },
   "scripts": {
@@ -18,6 +20,7 @@
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy" : "npm run build&&gh-pages -d build"
   }
 }
